; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/hal/extr_hprw.c_zfInitCmdQueue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/hal/extr_hprw.c_zfInitCmdQueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.zsHpPriv = type { %struct.TYPE_3__, i64, i64, i64, i64 }
%struct.TYPE_3__ = type { i64 }

@wd = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zfInitCmdQueue(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.zsHpPriv*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @zmw_get_wlan_dev(i32* %4)
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @wd, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.zsHpPriv*
  store %struct.zsHpPriv* %9, %struct.zsHpPriv** %3, align 8
  %10 = call i32 (...) @zmw_declare_for_critical_section()
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @zmw_enter_critical_section(i32* %11)
  %13 = load %struct.zsHpPriv*, %struct.zsHpPriv** %3, align 8
  %14 = getelementptr inbounds %struct.zsHpPriv, %struct.zsHpPriv* %13, i32 0, i32 2
  store i64 0, i64* %14, align 8
  %15 = load %struct.zsHpPriv*, %struct.zsHpPriv** %3, align 8
  %16 = getelementptr inbounds %struct.zsHpPriv, %struct.zsHpPriv* %15, i32 0, i32 3
  store i64 0, i64* %16, align 8
  %17 = load %struct.zsHpPriv*, %struct.zsHpPriv** %3, align 8
  %18 = getelementptr inbounds %struct.zsHpPriv, %struct.zsHpPriv* %17, i32 0, i32 1
  store i64 0, i64* %18, align 8
  %19 = load %struct.zsHpPriv*, %struct.zsHpPriv** %3, align 8
  %20 = getelementptr inbounds %struct.zsHpPriv, %struct.zsHpPriv* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i64 0, i64* %21, align 8
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @zmw_leave_critical_section(i32* %22)
  ret void
}

declare dso_local i32 @zmw_get_wlan_dev(i32*) #1

declare dso_local i32 @zmw_declare_for_critical_section(...) #1

declare dso_local i32 @zmw_enter_critical_section(i32*) #1

declare dso_local i32 @zmw_leave_critical_section(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
